# agentarium

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PROGRAM_STATUS.yaml  README.md  conftest.py  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
agents/: catalog.yaml  embedders.py
agents/auditor/: Dockerfile  agent.py  contract.py  query.py
agents/echo/: Dockerfile  agent.py
agents/executor/: Dockerfile  agent.py  contract.py  graph.py  tools.py
agents/parser/: Dockerfile  agent.py  contract.py
agents/rag/: Dockerfile  agent.py  contract.py  query.py
agents/reverse/: Dockerfile  agent.py
configs/: dba-base-local.yaml  dba-base.yaml  dba-extended-local.yaml  dba-extended.yaml  echo-pair.yaml  storage-test.yaml
core/agentarium/: __init__.py  __main__.py  agent.py  apply.py  bus.py  contracts.py  embedders.py  envelope.py  envelope.schema.json  health.py  observability.py  storage.py  topology.py
core/gateway/: app.py  (+5 more)
demo/: chaos.sh  run_demo.py  run_echo.py
docs/: ARCHITECTURE.md  GUIDE.md
spec/: 00-principles.md  05-stack.md  10-point-b.md  20-envelope.md  30-sdk.md  40-topology.md  45-storage.md  50-observability.md  55-poc-scenario.md  60-acceptance.md  70-roadmap.md  README.md
tests/: doubles.py  test_auditor_query.py  test_catalog.py  test_contracts_dba.py  test_dba_extended.py  test_embedders.py  test_envelope.py  test_executor_tools.py  test_gateway.py  test_gen_compose.py  test_health.py  test_ingest.py  test_observability.py  test_rag_query.py  test_topology.py
tools/: gen_compose.py  ingest.py  smoke_gigachat.py
(+33 files in other folders)
